Change: Both skins have the child nodes aligned for better readability. Bugfix: Prevent get_object_vars() from triggering a fatal in a faulty property hook.

--- a/Resources/Private/krexx/resources/skins/smokygrey/skin.scss
+++ b/Resources/Private/krexx/resources/skins/smokygrey/skin.scss
@@ -451,7 +451,7 @@ $fontLight: lighter 10px tahoma, verdana;
       margin: 0 0 5px;
       background-color: $white;
       line-height: 13px;
-      padding-left: 15px;
+      padding-left: 24px;
       @include border-radius-top(1px);
       @include border-radius-bottom(1px);
 
